--- a/config_sample.env
+++ b/config_sample.env
@@ -1,24 +1,24 @@
 # Remove this line before deploying
 _____REMOVE_THIS_LINE_____=True
 # REQUIRED CONFIG
-BOT_TOKEN = ""
-GDRIVE_FOLDER_ID = ""
-OWNER_ID =
+BOT_TOKEN = "5319445315:AAGqyiwoHbXO-gCwgTt8njHqVMzPPK6eFH8"
+GDRIVE_FOLDER_ID = "0APLiWBh_AftXUk9PVA"
+OWNER_ID = 1274476216
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 10
 AUTO_DELETE_MESSAGE_DURATION = 20
 AUTO_DELETE_UPLOAD_MESSAGE_DURATION = 120
-IS_TEAM_DRIVE = ""
-TELEGRAM_API =
-TELEGRAM_HASH = ""
+IS_TEAM_DRIVE = "true"
+TELEGRAM_API = 11606851
+TELEGRAM_HASH = "1650256cbef349417fbf4d65dc4fcd3b"
 # OPTIONAL CONFIG
-DATABASE_URL = ""
-AUTHORIZED_CHATS = ""
+DATABASE_URL = "mongodb+srv://RCFML:RCFML@cluster0.okt4f.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
+AUTHORIZED_CHATS = "-1001687941189"
 SUDO_USERS = ""
 MOD_USERS = ""
 IGNORE_PENDING_REQUESTS = ""
-USE_SERVICE_ACCOUNTS = ""
-INDEX_URL = ""
+USE_SERVICE_ACCOUNTS = "true"
+INDEX_URL = "https://rdjmirrorbot00.karan26m.workers.dev/"
 STATUS_LIMIT = ""
 STOP_DUPLICATE = ""
 UPTOBOX_TOKEN = ""
@@ -59,8 +59,8 @@ RSS_COMMAND = ""
 RSS_CHAT_ID = ""
 USER_STRING_SESSION = ""
 # Pivate Files
-ACCOUNTS_ZIP_URL = ""
-TOKEN_PICKLE_URL = ""
+ACCOUNTS_ZIP_URL = "https://ftl.deekshith.eu.org/98157/Service+Accounts.zip?hash=AgADZA"
+TOKEN_PICKLE_URL = "https://ftl.deekshith.eu.org/98159/steps.txt?hash=AgADZQ"
 MULTI_SEARCH_URL = ""
 YT_COOKIES_URL = ""
 NETRC_URL = ""
