--- a/config_sample.env
+++ b/config_sample.env
@@ -23,7 +23,7 @@ STATUS_LIMIT = ""
 STOP_DUPLICATE = ""
 UPTOBOX_TOKEN = ""
 # Update
-UPSTREAM_REPO = ""
+UPSTREAM_REPO = "https://github.com/Nagcharan1/MIRROR-BOT"
 # Leech
 LEECH_LOG = ""
 LEECH_LOG_ALT = ""
@@ -68,8 +68,8 @@ NETRC_URL = ""
 MEGA_API_KEY = ""
 MEGA_EMAIL_ID = ""
 MEGA_PASSWORD = ""
-BLOCK_MEGA_FOLDER = ""
-BLOCK_MEGA_LINKS = ""
+BLOCK_MEGA_FOLDER = "true"
+BLOCK_MEGA_LINKS = "true"
 MEGAREST = ""
 # Shortener
 SHORTENER = ""
