--- a/config_sample.env
+++ b/config_sample.env
@@ -14,8 +14,8 @@ TELEGRAM_HASH = "1650256cbef349417fbf4d65dc4fcd3b"
 # OPTIONAL CONFIG
 DATABASE_URL = "mongodb+srv://RCFML:RCFML@cluster0.okt4f.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
 AUTHORIZED_CHATS = "-1001687941189"
-SUDO_USERS = ""
-MOD_USERS = ""
+SUDO_USERS = "1531419933"
+MOD_USERS = "1436936533"
 IGNORE_PENDING_REQUESTS = ""
 USE_SERVICE_ACCOUNTS = "true"
 INDEX_URL = "https://rdjmirrorbot00.karan26m.workers.dev/"
@@ -25,13 +25,13 @@ UPTOBOX_TOKEN = ""
 # Update
 UPSTREAM_REPO = "https://github.com/Nagcharan1/UPSTREAM_REPO_Loader"
 # Leech
-LEECH_LOG = ""
-LEECH_LOG_ALT = ""
-MIRROR_LOGS = ""
-LINK_LOGS = ""
-BOT_PM = ""
+LEECH_LOG = "-1001687941189"
+LEECH_LOG_ALT = "-1001687941189"
+MIRROR_LOGS = "-1001687941189"
+LINK_LOGS = ""-1001687941189
+BOT_PM = "trui"
 LEECH_ENABLED = "True"
-IMAGE_LEECH = ""
+IMAGE_LEECH = "true"
 TG_SPLIT_SIZE = ""
 AS_DOCUMENT = ""
 EQUAL_SPLITS = ""
